web3j can't seem to encode empty lists
Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>